# randomness

./: .gitignore  .remote_spark.env.example  README.md  pyproject.toml
docs/: architecture.md  dgx_spark_runbook.md
scripts/docker/: _logging.sh  check_cuda_host.sh
scripts/remote/: _common.sh  run_remote_dice_audit.sh
scripts/spark/: bootstrap_checkout.sh  run_exact_audit.sh  run_gpu_bucket_audit.sh  run_gpu_bucket_suite.sh
src/dice_randomness/: __init__.py  algorithm.py  audit.py  cli.py  report.py  stats.py  suite.py
tests/: test_algorithm.py  test_audit.py  test_suite.py
